--- a/assets/localizations/app_ru.arb
+++ b/assets/localizations/app_ru.arb
@@ -1,5 +1,6 @@
 {
     "authSignInTitle": "Авторизация",
     "authSignInEmailLabel": "Электронная почта",
+    "authSignInPasswordLabel": "Пароль",
     "authSignInSubmitLabel": "Войти"
 }
