--- a/assets/localizations/app_ru.arb
+++ b/assets/localizations/app_ru.arb
@@ -6,12 +6,7 @@
     "moviesWatchNowTitle": "Смотреть",
     "moviesWatchNowUpNextLabel": "Продолжить",
     "moviesWatchNowMostPopularLabel": "Самое популярное",
-    "moviesComponentsMoviePreviewTypeTv": "ТВ",
-    "moviesComponentsMoviePreviewTypeMovie": "Фильм",
-    "moviesComponentsMoviePreviewTypeOva": "OVA",
-    "moviesComponentsMoviePreviewTypeOna": "ONA",
-    "moviesComponentsMoviePreviewTypeSpecial": "Special",
-    "moviesComponentsMoviePreviewTypeMusic": "Музыкальное",
+    "moviesComponentsMoviePreviewType": "{type, select, tv{ТВ} movie{Фильм} ova{OVA} ona{ONA} special{Спешл} music{Музыкальное} other{}}",
     "moviesComponentsUpNextStatus": "{watchStatus, select, watching{{type, select, tv{{episode} серия} movie{Фильм} ova{OVA {episode} серия} ona{ONA {episode} серия} special{Спешл {episode} серия} other{{episode} серия}}} rewatching{{type, select, tv{{episode} серия} ova{OVA {episode} серия} ona{ONA {episode} серия} special{Спешл {episode} серия} other{{episode} серия}}} planned{Запланировано} onHold{Отложено на {episode} серии} other{{episode} серия}}",
     "@moviesComponentsUpNextStatus": {
         "placeholders": {
