--- a/assets/localizations/app_ru.arb
+++ b/assets/localizations/app_ru.arb
@@ -1,11 +1,8 @@
 {
     "@@locale": "ru",
-    "authSignInTitle": "Авторизация",
     "authSignInEmailLabel": "Электронная почта",
     "authSignInSubmitLabel": "Войти",
-    "moviesWatchNowTitle": "Смотреть",
-    "moviesWatchNowUpNextLabel": "Продолжить",
-    "moviesWatchNowMostPopularLabel": "Самое популярное",
+    "authSignInTitle": "Авторизация",
     "moviesComponentsMoviePreviewType": "{type, select, tv{ТВ} movie{Фильм} ova{OVA} ona{ONA} special{Спешл} music{Музыкальное} other{}}",
     "moviesComponentsUpNextStatus": "{watchStatus, select, watching{{type, select, tv{{episode} серия} movie{Фильм} ova{OVA {episode} серия} ona{ONA {episode} серия} special{Спешл {episode} серия} other{{episode} серия}}} rewatching{{type, select, tv{{episode} серия} ova{OVA {episode} серия} ona{ONA {episode} серия} special{Спешл {episode} серия} other{{episode} серия}}} planned{Запланировано} onHold{Отложено на {episode} серии} other{{episode} серия}}",
     "@moviesComponentsUpNextStatus": {
@@ -20,5 +17,8 @@
                 "type": "num"
             }
         }
-    }
+    },
+    "moviesWatchNowMostPopularLabel": "Самое популярное на AniWay",
+    "moviesWatchNowTitle": "Смотреть сейчас",
+    "moviesWatchNowUpNextLabel": "К просмотру"
 }
