Movies search fixes

--- a/modules/movies/assets/localizations/ru.arb
+++ b/modules/movies/assets/localizations/ru.arb
@@ -25,5 +25,5 @@
     "watchNowMostPopularLabel": "Самое популярное на AniWay",
     "watchNowTitle": "Смотреть сейчас",
     "watchNowUpNextLabel": "К просмотру",
-    "hintText": "Поиск"
+    "searchSearchBarHint": "Поиск"
 }
