Video player and controls segregation

--- a/modules/player/assets/localizations/ru.arb
+++ b/modules/player/assets/localizations/ru.arb
@@ -1,3 +1,6 @@
 {
-    "@@locale": "ru"
+    "@@locale": "ru",
+    "moviePlayerPreferencesTranslationTypeLabel": "Тип перевода",
+    "moviePlayerPreferencesTranslationType": "{type, select, raw{Оригинал} sub{Субтитры} voice{Озвучка} other{Неизвестный тип}}",
+    "moviePlayerPreferencesTranslationLabel": "Перевод"
 }
