--- a/modules/player/assets/localizations/ru.arb
+++ b/modules/player/assets/localizations/ru.arb
@@ -1,5 +1,13 @@
 {
     "@@locale": "ru",
+    "componentsSeekGestureSeekValue": "{seconds} секунд",
+    "@componentsSeekGestureSeekValue": {
+        "placeholders": {
+            "seconds": {
+                "type": "int"
+            }
+        }
+    },
     "moviePlayerPreferencesTranslationTypeLabel": "Тип перевода",
     "moviePlayerPreferencesTranslationType": "{type, select, raw{Оригинал} sub{Субтитры} voice{Озвучка} other{Неизвестный тип}}",
     "moviePlayerPreferencesTranslationLabel": "Перевод"
