--- a/modules/movies/assets/localizations/ru.arb
+++ b/modules/movies/assets/localizations/ru.arb
@@ -1,19 +1,20 @@
 {
     "@@locale": "ru",
-    "componentsMoviePreviewType": "{type, select, tv{ТВ} movie{Фильм} ova{OVA} ona{ONA} special{Спешл} music{Музыкальное} other{}}",
-    "@componentsMoviePreviewType": {
+    "moviePreviewType": "{type, select, tv{ТВ} movie{Фильм} ova{OVA} ona{ONA} special{Спешл} music{Музыкальное} other{}}",
+    "@moviePreviewType": {
         "placeholders": {
             "type": {
                 "type": "String"
             }
         }
     },
-    "componentsUpNextStatus": "{watchStatus, select, watching{{type, select, tv{{episode} серия} movie{Фильм} ova{OVA {episode} серия} ona{ONA {episode} серия} special{Спешл {episode} серия} other{{episode} серия}}} rewatching{{type, select, tv{{episode} серия} ova{OVA {episode} серия} ona{ONA {episode} серия} special{Спешл {episode} серия} other{{episode} серия}}} planned{Запланировано} onHold{Отложено на {episode} серии} other{{episode} серия}}",
-    "@componentsUpNextStatus": {
+    "searchSearchBarHint": "Поиск",
+    "watchNowMostPopularLabel": "Самое популярное на AniWay",
+    "watchNowTitle": "Смотреть сейчас",
+    "watchNowUpNextLabel": "К просмотру",
+    "upNextStatus": "{type, select, tv{{episode} серия} movie{Фильм} ova{OVA {episode}} ona{ONA {episode}} special{Спешл {episode}} other{{episode} серия}}",
+    "@upNextStatus": {
         "placeholders": {
-            "watchStatus": {
-                "type": "String"
-            },
             "type": {
                 "type": "String"
             },
@@ -21,9 +22,5 @@
                 "type": "num"
             }
         }
-    },
-    "watchNowMostPopularLabel": "Самое популярное на AniWay",
-    "watchNowTitle": "Смотреть сейчас",
-    "watchNowUpNextLabel": "К просмотру",
-    "searchSearchBarHint": "Поиск"
+    }
 }
