--- a/modules/auth/assets/localizations/ru.arb
+++ b/modules/auth/assets/localizations/ru.arb
@@ -1,5 +1,8 @@
 {
     "@@locale": "ru",
     "signInEmailLabel": "Электронная почта",
+    "signInEmailInvalidError": "Неверный адрес электронной почты",
+    "signInPasswordLabel": "Пароль",
+    "singInSubmitLabel": "Войти",
     "signInTitle": "Авторизация"
 }
